--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 <h1>MY Git and Git Hub</h1>
+<p>This is going much better than it went the first time around!</p>
 </body>
 </html>
